add celr bpceit and ceidf

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="" alt="CELR" width="400" height="300">
+          <img src="./Pictures/team/celr/celr.jpg" alt="CELR" width="400" height="300">
           <p><strong>CELR</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCELR">View Team</button>
         </div>
@@ -952,21 +952,21 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ceidf/Nicolas MOUSSAUD CEIDF 1.jpg" alt="Head" width="400" height="300">
                 <p><strong>Nicolas MOUSSAUD</strong></p>
                 <p><strong>Skipper</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ceidf/.jpg" alt="Head" width="400" height="300">
               <p><strong>Anne MOUSSAUD</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ceidf/Laurent MOLINAS CE CEIDF 1.jpg" alt="Head" width="400" height="300">
               <p><strong>Laurent MOLINAS</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -975,21 +975,21 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ceidf/Nathalie COCQ CEIDF 1.jpg" alt="Head" width="400" height="300">
               <p><strong>Nathalie COCQ</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ceidf/Dany DELINDE CEIDF 1.jpg" alt="Head" width="400" height="300">
               <p><strong>Dany DELINDE</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ceidf/Pascale MARYANKOWSKI CEIDF 1.jpg" alt="Head" width="400" height="300">
               <p><strong>Pascale MARYANKOWSKI</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -998,7 +998,7 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ceidf/.jpg" alt="Head" width="400" height="300">
               <p><strong>Hélène TARRISSE</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -1309,21 +1309,21 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/celr/Gérard GALET.jpg" alt="Head" width="400" height="300">
                 <p><strong>GERARD GALET</strong></p>
                 <p><strong>Skipper</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/celr/Laurent POTART.jpg" alt="Head" width="400" height="300">
               <p><strong>LAURENT POTART</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/celr/Daniel BALLESTER.jpg" alt="Head" width="400" height="300">
               <p><strong>DANIEL BALLESTER</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -1332,21 +1332,21 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/celr/Michel LLUENGO.jpg" alt="Head" width="400" height="300">
               <p><strong>MICHEL LLUENGO</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/celr/Eric LELOUP.jpg" alt="Head" width="400" height="300">
               <p><strong>ERIC LELOUP</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/celr/Claude PEREZ.jpg" alt="Head" width="400" height="300">
               <p><strong>CLAUDE PEREZ</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -1355,7 +1355,7 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/celr/Myriam GARRIC.jpg" alt="Head" width="400" height="300">
               <p><strong>MYRIAM GARRIC</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -1940,21 +1940,21 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/bpceit/stephanebourlier.png" alt="Head" width="400" height="300">
                 <p><strong>Stéphane BOURLIER</strong></p>
                 <p><strong>Skipper</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/bpceit/genevievebourlier.png" alt="Head" width="400" height="300">
               <p><strong>Geneviève BOURLIER</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/bpceit/arnaudcornet.png" alt="Head" width="400" height="300">
               <p><strong>Arnaud CORNET</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -1963,22 +1963,22 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/bpceit/pascalfavier.png" alt="Head" width="400" height="300">
               <p><strong>Pascal FAVIER</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/bpceit/jlmoussu.png" alt="Head" width="400" height="300">
               <p><strong>Jean-Luc MOUSSU</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
-              <p><strong>Jean-Dominique PIERRET</strong></p>
+              <img src="./Pictures/team/bpceit/cedricwecker.png" alt="Head" width="400" height="300">
+              <p><strong>Cédric WECKER</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
@@ -1986,18 +1986,12 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/bpceit/stephanetritz.png" alt="Head" width="400" height="300">
               <p><strong>Stéphane TRITZ</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
-          <div class="col-sm-4">
-            <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
-              <p><strong>Cédric WECKER</strong></p>
-              <p><strong>Equipier</strong></p>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
