--- a/index.html
+++ b/index.html
@@ -2197,7 +2197,7 @@
       <div class="col-sm-4">
           <br>
           <a href=http://www.ipc.com//>
-          <img src="./Pictures/IPC.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="./Pictures/SPONSORS/IPC_logo.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
           </a>
       </div>
     </div>
@@ -2210,6 +2210,9 @@
       </div>
       <div class="col-sm-4">
           <br>
+          <a href=https://www.bpcemutuelle.fr/index.aspx/>
+          <img src="./Pictures/SPONSORS/BPCE Mutuelle.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
           
       </div>
       <div class="col-sm-4">
