FIX BPCE Mutuelle size

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
   .container {
       padding: 80px 120px;
   }
+  .img-circle {
+	display: block;
+  	max-width:250px;
+  	max-height:250px;
+  	width: auto;
+  	height: auto;
+  }
+  }
   .person {
       border: 10px solid transparent;
       margin-bottom: 25px;
