--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   	max-width:250px;
   	max-height:250px;
   	width: auto;
+	height: auto;
   }
   .person {
       border: 10px solid transparent;
