--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
     <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
+      <img src="./Pictures/affiche.png" alt="affiche" width="1600" height="700">  
+    </div>
+    <div class="item">
       <img src="./Pictures/caroussel1.png" alt="Marseille" width="1600" height="700">
       <div class="carousel-caption">
         <h3>MARSEILLE</h3>
@@ -240,7 +243,7 @@
       <img src="./Pictures/caroussel2.png" alt="Challenge" width="1200" height="700">
       <div class="carousel-caption">
         <h3>LE CHALLENGE</h3>
-        <p>3 JOURS DE COURSE SUR GRAND SUPRISE</p>
+        <p>3 JOURS DE REGATTES SUR GRAND SUPRISE</p>
       </div>      
     </div>
 
@@ -271,9 +274,10 @@
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="1"</li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
     </ol>
   </div>
 </div>
@@ -339,14 +343,18 @@
   <div class="row text-center">
     <div class="row">
       <div class="col-sm-3">
-        <p class="text-center"><strong>L'équipe organisatrice</strong></p><br>
+        <p class="text-center"><strong>Generale</strong></p><br>
         <a href="#demo4" data-toggle="collapse">
             <img src="./Pictures/ORGALOGO.png" class="img-circle person" alt="Random Name3" width="255" height="255">
         </a>
       	<br>
       	<a class="down-arrow" href="#demo4" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down" title="Voir"></span></a>
         <div id="demo4" class="collapse">
-          <a href="mailto:bpce-challenge-voile2017@ap.natixis.com">Contactez-nous !</a>
+          <ul>
+            <li><a href="https://www.frioul-if-express.com/horaires">Les horaires des navettes pour les iles Frioul</a></li>
+            <li><a href="https://www.google.com.hk/maps/place/La+Nautique+-+Restaurant+Marseille/@43.2928081,5.3676754,17z/data=!3m1!4b1!4m5!3m4!1s0x12c9c0c6f84e74a3:0xf955512469a75b3b!8m2!3d43.2928042!4d5.3698694">Le plan de la Nautique</a></li>
+            <li><a href="mailto:bpce-challenge-voile2017@ap.natixis.com">Contactez-nous !</a></li>
+          </ul>
         </div>
       </div>
       <div class="col-sm-3">
@@ -1744,7 +1752,7 @@
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/bpce01/cyrilbonnet.png" alt="Head" width="400" height="300">
               <p><strong>Cyril BONNET</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -2218,7 +2226,7 @@
       <div class="col-sm-4">
           <br>
           <a href=https://www.bpcemutuelle.fr/index.aspx/>
-          <img src="./Pictures/SPONSORS/BPCE Mutuelle.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="./Pictures/SPONSORS/bpcemutuelle.png" class="img-circle person" alt="Random Name" width="255" height="255">
           </a>
           
       </div>
