--- a/index.html
+++ b/index.html
@@ -262,6 +262,10 @@
         <p></p>
       </div>      
     </div>
+    <div class="item">
+      <img src="./Pictures/nautistore.png" alt="Nautistore" width="1200" height="700">
+      
+    </div>
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -278,6 +282,7 @@
       <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
       <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-target="#myCarousel" data-slide-to="5"></li>
     </ol>
   </div>
 </div>
@@ -340,8 +345,8 @@
 
 <div id="info" class="container text-center">
   <h3>INFO PRATIQUES</h3>
-  <div class="row text-center">
-    <div class="row">
+  <div class="row">
+
       <div class="col-sm-3">
         <p class="text-center"><strong>Generale</strong></p><br>
         <a href="#demo4" data-toggle="collapse">
@@ -404,7 +409,7 @@
             <li>Documents de course : <a href=http://www.lanautique.com/regates-infos-societe-nautique-marseille.asp?nomRegate=Challenge%20Voile%20BPCE />Lien vers le site de La Nautique</a></li>
           </ul>
         </div>
-      </div>
+
     </div>
   </div>
 </div>
