ADD plan d acces voutes virgo et fort ganteaume

--- a/index.html
+++ b/index.html
@@ -307,9 +307,10 @@
           <div class="col-sm-6">
             <ul>
               <p><b>Samedi 23 Septembre:</b></p>
-                <li>9h: Briefing skipper</li>
-                <li>10h: Parcours bananes</li>
-                <li>19h: Diner et soirée des Sponsors</li>
+                <li>10h: Briefing skipper</li>
+                <li>10h15: Photo de tous les participants</li>
+                <li>11h: Premier signal d'attention pour 3 ou 4 manches</li>
+                <li>19h30: Soirée des Sponsors au <a href=https://www.google.fr/maps/place/Fort+Ganteaume/@43.2928703,5.3658372,17z/data=!4m5!3m4!1s0x12c9c0c525912225:0x1e05fcb059bdfdbe!8m2!3d43.2928235!4d5.3632623>Fort Ganteaume</a></li>
             </ul>
           </div>
         </div>
@@ -320,20 +321,22 @@
           <div class="col-sm-6">
             <ul>
               <p><b>Dimanche 24 Septembre:</b></p>
-                  <li>9h: Briefing skipper</li>
-                  <li>10h: Parcours côtiers</li>
-                  <li>12h30: Mouillage dans le parc national des calanques</li>
-                  <li>17h: Retour au port</li>
-                  <li>19h: Diner et soirée Gala</li>
+                  <li>9h15: Briefing skipper</li>
+                  <li>10h: Premier signal d'attention pour un parcours côtier</li>
+                  <li>13h: Mouillage dans le parc national des calanques</li>
+                  <li>17h: Retour au port et apperitif sur les Pontons de <a href=https://www.google.fr/maps/place/Soci%C3%A9t%C3%A9+Nautique+de+Marseille/@43.2932204,5.369806,19.5z/data=!4m8!1m2!2m1!1sclub+la+nautique+marseille!3m4!1s0x0:0x4f5b9e93ea67026b!8m2!3d43.293367!4d5.3698599>La Nautique</a></li>
+                  <li>19h30: Diner Natixis Asia Pacifique aux <a href=https://www.google.fr/maps/place/Soci%C3%A9t%C3%A9+Nautique+de+Marseille/@43.2932204,5.369806,19.5z/data=!4m8!1m2!2m1!1sclub+la+nautique+marseille!3m4!1s0x0:0x4f5b9e93ea67026b!8m2!3d43.293367!4d5.3698599>Voutes Virgo</a></li>
             </ul>
           </div>
           <div class="col-sm-6">
             <ul>
               <p><b>Lundi 25 Septembre:</b></p>
-                <li>8h30: Briefing skipper</li>
-                <li>9h30: Parcours bananes</li>
+                <li>8h: Retour des chambres. Les sacs peuvent être deposés à la Nautique</li>
+                <li>8h30: Briefing des skippers</li>
+                <li>9h30: Premier signal d'attention pour 2 manches</li>
+                <li>8h30: Retour au port et inventaire des bateaux</li>
                 <li>15h: Remise des prix à La Nautique</li>
-                <li>16h: Depart des equipages</li>
+                <li>16h: Depart des participants</li>
             </ul>
           </div>
         </div>
@@ -372,10 +375,12 @@
         	<a class="down-arrow" href="#demo" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down" title="Voir"></span></a>
           <div id="demo" class="collapse">
               <ul>
-                <li><a href=https://www.residence-canebiere.com/ />Résidence La Canebière, centre Leo Lagrange</a> - <a href=https://www.google.com.hk/maps/place/R%C3%A9sidence+La+Canebi%C3%A8re/@43.297177,5.380173,15z/data=!4m5!3m4!1s0x0:0x403a86d6eecb08e5!8m2!3d43.297177!4d5.380173>Plan d'acces</a></li>
-                <li><a href=http://www.hotelvertigo.fr/>Hotel Vertigo Vieux-Port</a> - <a href=https://www.google.com.hk/maps/place/Vertigo+Hostel+Vieux-Port/@43.3016219,5.370475,15z/data=!4m8!1m2!2m1!1shotel+vertigo!3m4!1s0x0:0xcb4edddad8581fc2!8m2!3d43.2913554!4d5.371837>Plan d'acces</a></li>
-                <li>Restaurants a venir prochainement.</li>
+                <li><a href=https://www.residence-canebiere.com/ />Résidence La Canebière, centre Leo Lagrange</a> - <a href=https://www.google.com.hk/maps/place/R%C3%A9sidence+La+Canebi%C3%A8re/@43.297177,5.380173,15z/data=!4m5!3m4!1s0x0:0x403a86d6eecb08e5!8m2!3d43.297177!4d5.380173>Plan d'accès</a></li>
+                <li><a href=http://www.hotelvertigo.fr/>Hotel Vertigo Vieux-Port</a> - <a href=https://www.google.com.hk/maps/place/Vertigo+Hostel+Vieux-Port/@43.3016219,5.370475,15z/data=!4m8!1m2!2m1!1shotel+vertigo!3m4!1s0x0:0xcb4edddad8581fc2!8m2!3d43.2913554!4d5.371837>Plan d'accès</a></li>
+                <li>Fort Ganteaume - <a href=https://www.google.fr/maps/place/Fort+Ganteaume/@43.2928703,5.3658372,17z/data=!4m5!3m4!1s0x12c9c0c525912225:0x1e05fcb059bdfdbe!8m2!3d43.2928235!4d5.3632623>Plan d'accès</a></li>
+              <li>Voutes Virgo - <a href=https://www.google.fr/maps/place/Soci%C3%A9t%C3%A9+Nautique+de+Marseille/@43.2932204,5.369806,19.5z/data=!4m8!1m2!2m1!1sclub+la+nautique+marseille!3m4!1s0x0:0x4f5b9e93ea67026b!8m2!3d43.293367!4d5.3698599>Plan d'accès</a></li>
               </ul>
+              
           </div>
       </div>
       <div class="col-sm-3">
