--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                   <li>10h: Premier signal d'attention pour un parcours côtier</li>
                   <li>13h: Mouillage dans le parc national des calanques</li>
                   <li>17h: Retour au port et apperitif sur les Pontons de <a href=https://www.google.fr/maps/place/Soci%C3%A9t%C3%A9+Nautique+de+Marseille/@43.2932204,5.369806,19.5z/data=!4m8!1m2!2m1!1sclub+la+nautique+marseille!3m4!1s0x0:0x4f5b9e93ea67026b!8m2!3d43.293367!4d5.3698599>La Nautique</a></li>
-                  <li>19h30: Diner Natixis Asia Pacifique aux <a href=https://www.google.fr/maps/place/Soci%C3%A9t%C3%A9+Nautique+de+Marseille/@43.2932204,5.369806,19.5z/data=!4m8!1m2!2m1!1sclub+la+nautique+marseille!3m4!1s0x0:0x4f5b9e93ea67026b!8m2!3d43.293367!4d5.3698599>Voutes Virgo</a></li>
+                  <li>19h30: Diner Natixis Asia Pacifique aux <a href=https://goo.gl/maps/WhMX3zX3CPQ2>Voutes Virgo</a></li>
             </ul>
           </div>
           <div class="col-sm-6">
@@ -1131,7 +1131,7 @@
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/team/ibp/Stéphane B.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Stéphane B.jpg" alt="Head" width="400" height="300">
               <p><strong>Stéphane BOU</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -1147,7 +1147,7 @@
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/team/ibp/Stéphane E.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Stéphane E.jpg" alt="Head" width="400" height="300">
               <p><strong>Stéphane ENGUEHARD</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -1334,7 +1334,7 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/team/celr/Gérard GALET.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/celr/Gérard GALET.jpg" alt="Head" width="400" height="300">
                 <p><strong>GERARD GALET</strong></p>
                 <p><strong>Skipper</strong></p>
             </div>
